--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-heading: One Page Wonder
-subheading: Will Knock Your Socks Off
+heading: Nejaký pekný slogan
+subheading: ktorý sa skladá z 2 častí
 ---
 
 {% include header.html %}
